# Cognitiv

./: LICENSE  README.md  pyproject.toml
cognitiv/: __init__.py  brain.py  config.py  emotion.py  memory.py  types.py
cognitiv/integrations/: __init__.py
examples/: roman_merchant.py  test_with_llama.py
tests/: test_all.py
