[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitiv"
version = "0.1.0"
description = "A cognitive architecture for emotionally reactive agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Swamp Rabbit Labs"},
]
keywords = ["cognitive-architecture", "emotion", "memory", "agents", "npc", "occ-model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment",
]

# Zero dependencies. This is intentional.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
viz = ["matplotlib>=3.5"]  # for future visualization tools

[project.urls]
Homepage = "https://github.com/swamprabbit-labs/cognitiv"

[tool.setuptools.packages.find]
include = ["cognitiv*"]
